# rev-inspector

./: .env.example  .gitignore  AGENTS.md  PROJECT_WALKTHROUGH.txt  README.md  app.py  pyproject.toml
.codex/: SHADCN_MCP.md  config.toml
docs/: frontend-architecture.md
revinspector/: __init__.py  analyzer.py  cli.py  disasm.py  entropy.py  filetype.py  hashes.py  imports.py  indicators.py  metadata.py  models.py  report.py  strings.py  yara_scan.py
rules/: suspicious_strings.yar
samples/: example.sh
tests/: fixtures.py  test_analyzer.py  test_cli.py  test_filetype.py  test_report.py  test_strings.py  test_web.py
web/: __init__.py  app.py
web/static/: style.css  ui.js
web/templates/: index.html  report.html
